fixed forced border radius on iOS

--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -50,6 +50,17 @@
   .contact-message {
     height: 10em;
   }
+
+  input,
+  textarea {
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+  }
+
+  .form-btn {
+    font-weight: 300;
+  }
 }
 
 @media screen and (min-width: 1201px) {
